kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: homelab
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      name: kavita
  template:
    metadata:
      labels:
        name: kavita
        ingress: lan
        egress: all
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: kavita # https://github.com/Kareadita/Kavita
          # image: "ghcr.io/kareadita/kavita:v0.8.5.11" # Github image with latest fixed version
          # image: "lscr.io/linuxserver/kavita:latest" # LinuxServerIO version
          image: "jvmilazz0/kavita:nightly-0.8.5.26" # Dockerhub Image
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
              subPath: data
            - mountPath: /kavita/config
              name: data
              subPath: config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kavita-local-data-pvc
